compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_basic_record_without_argument.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2037
expression: "\nimport wobble\n\npub fn main() {\n  wobble.Wibble\n}\n"
---
----- BEFORE ACTION

import wobble

pub fn main() {
  wobble.Wibble
        ▔▔↑    
}


----- AFTER ACTION

import wobble.{Wibble}

pub fn main() {
  Wibble
}
