compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_basic_type_without_argument.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2053
expression: "\nimport wobble\n\npub fn identity(x: wobble.Wobble) -> wobble.Wobble {\n    x\n}\n"
---
----- BEFORE ACTION

import wobble

pub fn identity(x: wobble.Wobble) -> wobble.Wobble {
                         ▔↑                         
    x
}


----- AFTER ACTION

import wobble.{type Wobble}

pub fn identity(x: Wobble) -> Wobble {
    x
}
