compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_below_constructor.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2410
expression: "\n\npub fn main() {\n  option.Some(1)\n}\n\nimport option\n"
---
----- BEFORE ACTION


pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}

import option


----- AFTER ACTION


pub fn main() {
  Some(1)
}

import option.{Some}
