compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_constructor_as_argument.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2579
expression: "\nimport option\n\npub fn main() {\n    option.map(option.Some(1), fn(x) { x + 1 })\n}\n"
---
----- BEFORE ACTION

import option

pub fn main() {
    option.map(option.Some(1), fn(x) { x + 1 })
               ▔▔▔▔▔▔▔▔▔▔▔↑                    
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
    option.map(Some(1), fn(x) { x + 1 })
}
