compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_constructor_different_module_same_type_outer.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2620
expression: "\nimport option\nimport opt\n\npub fn main() -> option.Option<opt.Option<Int>> {\n    todo\n}\n"
---
----- BEFORE ACTION

import option
import opt

pub fn main() -> option.Option<opt.Option<Int>> {
                 ▔▔▔▔▔▔▔↑                        
    todo
}


----- AFTER ACTION

import option.{type Option}
import opt

pub fn main() -> Option<opt.Option<Int>> {
    todo
}
