compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_different_constructors.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2139
expression: "\nimport option\n\npub fn main() {\n  option.Some(1)\n  option.None\n}"
---
----- BEFORE ACTION

import option

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
  option.None
}


----- AFTER ACTION

import option.{Some}

pub fn main() {
  Some(1)
  option.None
}
